--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         button a{
             text-decoration: none;
             color: black;
+            padding: 10px 5px 10px 5px;
         }
         button{
-            width: 200px;
+            min-width: 200px;
             background-color: transparent;
             border: 1px solid rgba(128, 128, 128, 0.533);
             border-radius: 7px;
@@ -45,13 +46,13 @@
         </section>
         <div class="row w-100">
             <div class="col-5 m-2">
-                <h2 class="m-2 ms-3">Website Templates</h2><hr>
+                <h2 class="mt-2 ms-3">Website Templates</h2><hr>
                 <button><a href="Templates/Amazon.html">Amazon.in</a><span class="bi bi-chevron-right"></span></button>
                 <button><a href="Templates/Youtube.html">Youtube</a><span class="bi bi-chevron-right"></span></button>
                 <button><a href="Templates/AutoGuard.html">Car Service</a><span class="bi bi-chevron-right"></span></button>
             </div>
             <div class="col m-2">
-                <h2 class="m-2 ms-3">Projects</h2><hr>
+                <h2 class="mt-2 ms-3">Projects</h2><hr>
                 <button><a href="bmi-calculator.html">BMI Calculator</a><span class="bi bi-chevron-right"></span></button>
                 <button><a href="hotelReservation.html">Hotel Reservation</a><span class="bi bi-chevron-right"></span></button>
                 <button><a href="Shopping.com.html">Shopping.com</a><span class="bi bi-chevron-right"></span></button>
