--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <style rel="stylesheet">
         *{
             font-family: 'Courier New', monospace;
