--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <button><a href="Weather.html">Weather Forcast</a><span class="bi bi-chevron-right"></span></button>
                 <button><a href="OnlineCourse.html">Online Courses</a><span class="bi bi-chevron-right"></span></button>
                 <button><a href="Calculator.html">Calculator</a><span class="bi bi-chevron-right"></span></button>
+                <button><a href="liveTracker.html">Live Tracker</a><span class="bi bi-chevron-right"></span></button>
             </div>
         </div>
         <div class="mt-2 text-center" >
