--- a/liveTracker.html
+++ b/liveTracker.html
@@ -13,11 +13,11 @@
     </button> -->
 
     <script>
-        // navigator.geolocation.getCurrentPosition(position =>{
-        //     const {latitude, longitude}=position.coords;
-        //     //show a map centered at lant / long
-        //     map.innerHTML='<iframe width="700" height="300" src="https://maps.google.com/maps?q=' + latitude + ','+ longitude +'&amp;z=15&amp;output=embed"></iframe>';
-        // });
+        navigator.geolocation.getCurrentPosition(position =>{
+            const {latitude, longitude}=position.coords;
+            //show a map centered at lant / long
+            map.innerHTML='<iframe width="700" height="300" src="https://maps.google.com/maps?q=' + latitude + ','+ longitude +'&amp;z=15&amp;output=embed"></iframe>';
+        });
 
         var reqcount=0;
         navigator.geolocation.watchPosition(successCallback, errorCallback);
